fix: Address SonarCloud code smells in new URI template code
- Remove unused anyString import in TemplatedResourceLoadingTest
- Extract isEmptyCollection() helper in JaxRsControllerProxyLinkBuilder
  to reduce continue statements in loop to one
- Replace ImmutableList.of() with List.of() in link builder test
- Remove unused Iterables and ImmutableList imports

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>